Designtool css import

--- a/Inspire Interiors/Design tool -build/index.html
+++ b/Inspire Interiors/Design tool -build/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Blueprint JS - Floorplan</title>
+<title>Insp - Designtool</title>
+<link rel="icon" type="image/png" href="./logo.PNG" />
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
