--- a/Inspire Interiors/Design tool -build/index2.html
+++ b/Inspire Interiors/Design tool -build/index2.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Blueprint 3D - Example</title>
-
+    <title>Insp - Designtool</title>
+     <link rel="icon" type="image/png" href="./logo.PNG" />
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/example.css" rel="stylesheet">
 
